[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Tancrède Lepoint"]
documentation = "https://fhe.rs"
edition = "2021"
repository = "https://github.com/tlepoint/fhe.rs"
version = "0.1.0-beta.8"
license = "MIT"
rust-version = "1.73"

[workspace.dependencies]
clap = { version = "^4.5.4", features = ["derive"] }
concrete-ntt = "^0.1.2"
console = "^0.15.8"
criterion = "^0.5.1"
doc-comment = "^0.3.3"
env_logger = "^0.11.3"
ethnum = "^1.5.0"
fastdiv = "^0.1.0"
indicatif = "^0.17.8"
itertools = "^0.12.1"
log = "^0.4.21"
ndarray = "^0.15.6"
num-bigint = "^0.4.4"
num-bigint-dig = "^0.8.4"
num-traits = "^0.2.18"
proptest = "^1.4.0"
prost = "^0.12.4"
prost-build = "^0.12.3"
rand = "^0.8.5"
rand_chacha = "^0.3.1"
serde = "1.0.217"
sha2 = "^0.10.8"
thiserror = "^1.0.58"
zeroize = "^1.8.0"
zeroize_derive = "^1.4.2"
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
console_error_panic_hook = { version = "0.1.7"}
wee_alloc = { version = "0.4.5" }
anyhow = { version = "1.0" }
bincode = "1.3.3"
serde_json = "1.0"
pulp = { git = "https://github.com/ashu-t3/pulp", features = ["serde"] }
wasm-bindgen-test = "0.3.37"
once_cell = "1.18.0"
[workspace.dev-dependencies] 
wasm-bindgen-test = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1